--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -89,6 +89,7 @@
       margin: 8px 8px 0 0
       overflow-y: scroll
       float: left
+      @include user-select(text)
 
       .prop
         img
