--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -4,21 +4,24 @@
 #tome-view
   height: 100%
 
+  > .popover
+    // Only those popovers which are our direct children (spell documentation)
+    left: auto !important
+    top: auto !important
+    right: 100%
+    bottom: 151px
+    @include user-select(text)
+
+    &.pinned
+      @include box-shadow(0 0 500px white)
+
   .popover
     padding: 10px
     min-width: 400px
     background: transparent url(/images/level/popover_background.png)
     background-size: 100% 100%
     border: 0
-    left: auto !important
-    top: auto !important
-    right: 100%
-    bottom: 151px
     @include box-shadow(0 0 0 #000)
-    @include user-select(text)
-
-    &.pinned
-      @include box-shadow(0 0 500px white)
 
     h1:not(.not-code), h2:not(.not-code), h3:not(.not-code), h4:not(.not-code), h5:not(.not-code), h6:not(.not-code)
       font-family: Menlo, Monaco, Consolas, "Courier New", monospace
