Updating i18n tags for new contribute summaries.

--- a/app/styles/contribute_classes.sass
+++ b/app/styles/contribute_classes.sass
@@ -31,7 +31,10 @@
     box-sizing: border-box        
 
     .header-scrolling-fix
-      padding-top: 20px !important
+      // Padding: so that the anchors get scrolled properly below the top bar.
+      padding-top: 65px
+      // Margin: so that there isn't a huge space between classes
+      margin-top: -50px
       
     .well
       padding: 5px 5px 5px 30px
