--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -11,13 +11,16 @@
     right: 100%
     bottom: 151px
     @include user-select(text)
+    // Wish I could set max-width and max-height (and override Bootstrap's stuff)
+    // but without explicitly setting height, child overflow-y: scroll doesn't work
+    min-width: 100%
+    height: 60%
 
     &.pinned
       @include box-shadow(0 0 500px white)
 
   .popover
-    padding: 10px
-    min-width: 400px
+    padding: 10px 10px 30px 10px
     background: transparent url(/images/level/popover_background.png)
     background-size: 100% 100%
     border: 0
@@ -33,6 +36,8 @@
       border-bottom-color: #ccc
 
     .popover-content
+      max-height: 100%
+      overflow-y: scroll
       img
         float: right
 
