--- a/app/templates/play/level/modal/victory.jade
+++ b/app/templates/play/level/modal/victory.jade
@@ -14,6 +14,7 @@
       p.sign-up-poke
         button.btn.btn-success.sign-up-button.btn-large(data-toggle="coco-modal", data-target="modal/signup", data-i18n="play_level.victory_sign_up") Sign Up to Save Progress
         span(data-i18n="play_level.victory_sign_up_poke") Want to save your code? Create a free account!
+      p.clearfix
     else
       div.rating.secret
         span(data-i18n="play_level.victory_rate_the_level") Rate the level:
@@ -23,10 +24,7 @@
         i.icon-star-empty
         i.icon-star-empty
     if hasNextLevel
-      if nextLevelText
-        button.btn.btn-primary.next-level-button(data-dismiss="modal")= nextLevelText
-      else
-        button.btn.btn-primary.next-level-button(data-dismiss="modal", data-i18n="play_level.victory_play_next_level") Play Next Level
+      button.btn.btn-primary.next-level-button(data-dismiss="modal", data-i18n="play_level.victory_play_next_level") Play Next Level
     else
       a.btn.btn-primary(href="/", data-dismiss="modal", data-i18n="play_level.victory_go_home") Go Home
     if !me.get('anonymous')
