Working on the ladder and team views.

--- a/app/styles/play/ladder/team.sass
+++ b/app/styles/play/ladder/team.sass
@@ -1,4 +1,7 @@
 #ladder-team-view
+  #rank-button
+    margin-top: 15px
+  
   #competitors-column .well
     font-size: 16px
     font-weight: bold
