Fixed the placement of the music note in the playback view.

--- a/app/styles/play/level/playback.sass
+++ b/app/styles/play/level/playback.sass
@@ -26,6 +26,10 @@
   #music-button
     @include opacity(0.25)
     font-size: 20px
+    span
+      position: relative
+      left: -3px
+      top: -2px
     &:hover
       @include opacity(0.50)
     &.music-on
