--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -8,7 +8,7 @@ button.btn.btn-xs.btn-inverse#volume-button(title="Adjust volume")
   i.icon-volume-down.icon-white.big
   i.icon-volume-up.icon-white.big
 button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
-  | ♫
+  span ♫
 
 .scrubber
   .progress.secret
