Better comment formatting. Manual cast by default on Project DotA.

--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -95,3 +95,6 @@
 
     .ace_identifier
       border-bottom: 1px dotted rgba(255, 128, 128, 0.45)
+
+    .ace_text-layer .ace_comment
+      color: #EBFADA
