--- a/app/styles/play/level/tome/thang_list_entry.sass
+++ b/app/styles/play/level/tome/thang_list_entry.sass
@@ -7,9 +7,26 @@
   box-sizing: border-box
   width: 20%
   max-width: 100px
+  position: relative
 
   &.dead
-    @include opacity(0.50)
+    @include opacity(0.75)
+
+    &:after
+      content: "×"
+      font-size: 160px
+      color: red
+      @include opacity(0.75)
+      position: absolute
+      bottom: 0
+      height: 100%
+      width: 100%
+      text-align: center
+      line-height: 100px
+      font-family: monospace
+
+    .thang-name
+      text-decoration: line-through
 
   &.disabled
     @include opacity(0.25)
