Misaligned social share buttons

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -78,6 +78,10 @@ a[data-toggle="modal"]
   .github-star-button
     margin-left: 20px
 
+  &>div
+    display: inline-block
+    vertical-align: top
+
 .error
   left: 8px
 
