Various interface tweaks

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -11,7 +11,7 @@ block content
     for team in teams
       div.column.col-md-6
         a(href="/play/ladder/#{levelID}/team/#{team.id}", style="background-color: #{team.primaryColor}").play-button.btn.btn-danger.btn-block.btn-lg
-          span Play 
+          span Play As 
           span= team.name
 
         table.table.table-bordered.table-condensed.table-hover
