--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -251,7 +251,7 @@
           padding-right: 20px
 
         h3
-          margin: 0 0 5px
+          margin: 0
           font-size: 16px
           line-height: 16px
           color: #338
