--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -97,4 +97,6 @@
       border-bottom: 1px dotted rgba(255, 128, 128, 0.45)
 
     .ace_text-layer .ace_comment
-      color: #EBFADA
+      color: darken(rgb(76, 136, 107), 5%)
+      font-weight: bold
+      
