--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -6,6 +6,10 @@ block content
     div#level-description
       !{description}
   
+    a(href="something").intro-button.btn.btn-primary.btn-lg Watch the Video
+    
+    a(href="somethingelse").intro-button.btn.btn-primary.btn-lg Play the Tutorial
+
   hr
   div#columns.row
     for team in teams
