adding youtube link for instructional vid

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -6,7 +6,7 @@ block content
     div#level-description
       !{description}
   
-    a(href="something").intro-button.btn.btn-primary.btn-lg Watch the Video
+    a(href="http://www.youtube.com/watch?v=IFvfZiJGDsw&list=HL1392928835&feature=mh_lolz").intro-button.btn.btn-primary.btn-lg Watch the Video
     
     a(href="somethingelse").intro-button.btn.btn-primary.btn-lg Play the Tutorial
 
