Added fullscreen toggle to play with.

--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -16,6 +16,8 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
       .scrubber-handle
   
 .btn-group.dropup#playback-settings
+  button.btn.btn-xs.btn-inverse.toggle-fullscreen(title="Toggle fullscreen")
+    i.icon-fullscreen.icon-white
   button.btn.btn-xs.btn-inverse#zoom-in-button(title="Zoom In (or scroll down)")
     i.icon-zoom-in.icon-white
   button.btn.btn-xs.btn-inverse#zoom-out-button(title="Zoom Out (or scroll up)")
