Tweaks for ladder views.

--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -4,7 +4,12 @@
     
   .play-button
     margin-bottom: 10px
+    background-image: none
 
   .intro-button
     width: 45%
     margin: 0 2.5%
+
+  #simulation-status-text
+    display: inline
+    margin-left: 10px
