--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -19,6 +19,7 @@ block content
           span= team.name
 
         table.table.table-bordered.table-condensed.table-hover
+          //(style="background-color: #{team.bgColor}")
           tr
             th(colspan=3, style="color: #{team.primaryColor}")
               span= team.name
@@ -34,9 +35,9 @@ block content
               td= session.get('creatorName') || "Anonymous"
               td
                 if(!myRow)
-                  a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}") Compete!
+                  a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}") Battle as #{team.otherTeam}!
                 else
-                  a(href="/play/ladder/#{levelID}/team/#{team.id}") View details
+                  a(href="/play/ladder/#{levelID}/team/#{team.id}") View your #{team.id} matches.
 
   unless me.attributes.anonymous
     hr
