--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -53,6 +53,7 @@
     .popover-content
       max-height: 100%
       overflow-y: scroll
+      margin-right: 10px
       img
         float: right
 
