Added a link to the tutorial level.

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -8,7 +8,7 @@ block content
   
     a(href="something").intro-button.btn.btn-primary.btn-lg Watch the Video
     
-    a(href="somethingelse").intro-button.btn.btn-primary.btn-lg Play the Tutorial
+    a(href="/play/level/ladder-tutorial").intro-button.btn.btn-primary.btn-lg Play the Tutorial
 
   hr
   div#columns.row
