Fixed some scroll bars from appearing when they shouldn't.

--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -87,7 +87,7 @@
       width: 144px
       height: 100px
       margin: 8px 8px 0 0
-      overflow-y: scroll
+      overflow-y: auto
       float: left
       @include user-select(text)
 
@@ -133,7 +133,7 @@
       height: 100px
       margin: 8px 24px 8px 0
       float: left
-      overflow-y: scroll
+      overflow-y: auto
       overflow-x: hidden
 
       .table-container
