--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -52,7 +52,7 @@
 
     .popover-content
       max-height: 100%
-      overflow-y: scroll
+      overflow-y: auto
       margin-right: 10px
       img
         float: right
