Tweaked the name column size in the ladder view.

--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -13,3 +13,10 @@
   #simulation-status-text
     display: inline
     margin-left: 10px
+
+  .name-col-cell
+    max-width: 300px
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
+    
