--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -26,13 +26,14 @@ block content
               span  Leaderboard
           tr
             th Score
-            th Name
+            th.name-col-cell Name
+            th
 
           for session in team.leaderboard.topPlayers.models
             - var myRow = session.get('creator') == me.id
             tr(class=myRow ? "success" : "")
               td.score-cell= session.get('totalScore').toFixed(2)
-              td= session.get('creatorName') || "Anonymous"
+              td.name-col-cell= session.get('creatorName') || "Anonymous"
               td
                 if(!myRow)
                   a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}") Battle as #{team.otherTeam}!
