Fixed the background to match the footer so that there's no white at the bottom of the screen when playing full screen.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -1,6 +1,9 @@
 @import "bootstrap/variables"
 @import "bootstrap/mixins"
 
+html
+  background-color: #2f261d
+
 // https://github.com/twbs/bootstrap/issues/9237 -- need a version that's not !important
 .secret
   display: none
