--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -34,7 +34,7 @@
     height: 100%
     left: 0
     top: 0
-    z-index: -1
+    z-index: 0
     background-image: url(/images/level/hud_left_wing.png)
     background-position: right
 
@@ -44,7 +44,7 @@
     height: 100%
     right: 0
     top: 0
-    z-index: -1
+    z-index: 0
     background-image: url(/images/level/hud_right_wing.png)
     background-position: left
 
@@ -57,6 +57,8 @@
     color: #BEBEBE
     font-size: 12px
     overflow: hidden
+    z-index: 1
+    position: relative
 
     .no-selection-message
       display: none
