--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -43,7 +43,7 @@ block content
   unless me.attributes.anonymous
     hr
     button.btn.btn-warning.btn-lg.highlight#simulate-button(style="margin-bottom:10px;") Simulate Games!
-    p(id="simulationStatusText", style="display:inline; margin-left:10px;")
+    p(id="simulation-status-text", style="display:inline; margin-left:10px;")
       if simulationStatus
         | #{simulationStatus}
       else
