--- a/app/templates/play/level/tome/spell_list_tab_entry.jade
+++ b/app/templates/play/level/tome/spell_list_tab_entry.jade
@@ -7,4 +7,7 @@ code #{spell.name}(#{parameters})
 .btn.btn-small.reload-code(title="Reload original code for " + spell.name)
   i.icon-repeat
 
+.btn.btn-small.beautify-code(title="Ctrl+Shift+B: Beautify code for " + spell.name)
+  i.icon-magnet
+
 .clearfix
