Got rid of some unnecessary scrolling behavior on /play/level due to footer when aspect ratio is cramped.

--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -3,6 +3,7 @@
 
 #tome-view
   height: 100%
+  margin-bottom: -20px
 
   > .popover
     // Only those popovers which are our direct children (spell documentation)
