--- a/app/styles/play/level.sass
+++ b/app/styles/play/level.sass
@@ -131,3 +131,7 @@
     top: 0
     height: 100%
     width: 2%
+
+@media screen and (min-aspect-ratio: 17/10)
+  #level-view .footer
+    display: none
