Faded Contact link until hover.

--- a/app/styles/play/level.sass
+++ b/app/styles/play/level.sass
@@ -132,6 +132,9 @@
     height: 100%
     width: 2%
 
+  .footer:not(:hover)
+    @include opacity(0.6)
+
 @media screen and (min-aspect-ratio: 17/10)
   #level-view .footer
     display: none
