--- a/app/templates/play/level.jade
+++ b/app/templates/play/level.jade
@@ -26,4 +26,4 @@
 .footer
   .content
     p(class='footer-link-text')
-      a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Contact
+      a(title='Send CodeCombat a message', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Contact
