Fixed cast button moving around due to anticipated errors early.

--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -51,7 +51,7 @@
     line-height: 20px
     overflow: visible
 
-    &.user-code-problem
+    &.user-code-problem.spell-cast
       @include editor-height(40px)
 
     &.disabled
