A few fixes for IE, anonymous errors, and cast button overflow.

--- a/app/styles/play/level/tome/cast_button.sass
+++ b/app/styles/play/level/tome/cast_button.sass
@@ -88,6 +88,13 @@
       border-top-left-radius: 6px
       border-bottom-left-radius: 6px
 
+      @media screen and (max-width: 1440px)
+        font-size: 16px
+      @media screen and (max-width: 1280px)
+        font-size: 14px
+      @media screen and (max-width: 1024px)
+        font-size: 12px
+
     .cast-options-button
       width: 20%
       width: -webkit-calc(40px)
