Fixed application of a few i18n tags in wizard/picture settings.

--- a/app/templates/account/wizard_settings_tab.jade
+++ b/app/templates/account/wizard_settings_tab.jade
@@ -8,7 +8,7 @@ canvas#tinting-display(width=200, height=200).img-rounded
         span(data-i18n='wizard_settings.' + group.dasherized)= group.humanized
       div.sliders
         div.slider-cell
-          label(for=group.humanized+"_hue", data-i18n="wizard_settigs.hue") Hue
+          label(for=group.humanized+"_hue", data-i18n="wizard_settings.hue") Hue
           .selector(id=group.humanized+"_hue", name=group.name+'.hue', data-key='hue')
         div.slider-cell
           label(for=group.humanized+"_saturation", data-i18n="wizard_settings.saturation") Saturation
