Saturation and lightness was flipped on the spritebuilder. Fixed.

--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -57,7 +57,7 @@ block content
               a(href="http://en.gravatar.com/profiles/edit/?noclose#your-images", target="_blank", data-i18n="account_settings.gravatar_add_more_photos") Add more photos to your Gravatar account to access them here.
       
       #wizard-pane.tab-pane
-        #wizard-settings-tab-view
+        #wizard-settings-view
 
       #password-pane.tab-pane
         p
