Fixing the wizard settings modal.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -39,7 +39,7 @@
   .form
     max-width: 600px
     
-#wizard-settings-tab-view
+#wizard-settings-view
   #color-settings
     float: left
     width: 600px
