--- a/app/styles/modal/wizard_settings.sass
+++ b/app/styles/modal/wizard_settings.sass
@@ -1,20 +1,17 @@
 #wizard-settings-modal
   color: black
-  background: white
-  width: 400px
   
+  #wizard-settings-view #color-settings
+    width: 480px
+    
   canvas
-    border: 1px solid black
-    float: left
-
-  .settings
-    width: 225px
-    margin: 10px
-    display: inline-block
+    margin: 0px auto 20px
+    display: block
+    float: none
+    background: white
     
-  .selector
-    margin: 10px 5px
-    
-  button
-    margin-left: 10px
-    float: right
+  .wizard-name-line
+    text-align: center
+    margin-bottom: 10px
+    label
+      margin-right: 10px
