Finished up work on the wizard settings modal.

--- a/app/templates/modal/wizard_settings.jade
+++ b/app/templates/modal/wizard_settings.jade
@@ -11,5 +11,10 @@ block modal-body-content
 
   #wizard-settings-view
 
+block modal-body-wait-content
+  h3 Saving...
+.progress.progress-striped.active
+  .progress-bar
+
 block modal-footer-content
   button.btn.btn-primary.btn-large#wizard-settings-done(type="button") Done
