--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -24,9 +24,9 @@
       width: 300px
       height: 80px
         
-      //@include transition(color .10s linear) // buggy in chrome, coloring doesn't get the right edge of the word
+      @include transition(color .10s linear)
 
-    &:hover a, &:active a
+    &:hover button, &:active button
       color: #8090AA
 
     canvas
