--- a/app/styles/play/ladder/team.sass
+++ b/app/styles/play/ladder/team.sass
@@ -5,3 +5,8 @@
   #competitors-column .well
     font-size: 18px
     padding: 7px
+
+  #your-score
+    margin-top: 20px
+    text-align: center
+    font-size: 20px
