--- a/app/templates/play/ladder/team.jade
+++ b/app/templates/play/ladder/team.jade
@@ -15,7 +15,14 @@ block content
     
   p
     | After your first submission, your code will also continuously run against other players as they rank themselves.
-      
+
+  if matches.length
+    p#your-score
+      span Your Current Score:
+      span  
+      strong= score
+
+
   div#columns.row
     div#matches-column.col-md-6
       h3.pull-left Ranked Games
