Fixes for not storing default code in other sessions. sass-brunch 1.8. Removed tutorial link for now. Round wizards.

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -7,7 +7,7 @@ block content
       !{description}
   
     if !me.get('anonymous')
-      a(href="http://www.youtube.com/watch?v=IFvfZiJGDsw&list=HL1392928835&feature=mh_lolz").intro-button.btn.btn-primary.btn-lg Watch the Video
+      //a(href="http://www.youtube.com/watch?v=IFvfZiJGDsw&list=HL1392928835&feature=mh_lolz").intro-button.btn.btn-primary.btn-lg Watch the Video
       
       a(href="/play/level/ladder-tutorial").intro-button.btn.btn-primary.btn-lg Play the Tutorial
 
