Redirect to play page for non-existent levels. Fixes issue #396

--- a/app/templates/play.jade
+++ b/app/templates/play.jade
@@ -2,6 +2,10 @@ extends /templates/base
 
 block content
 
+  if notFound
+    div(class="alert alert-warning") 
+      h2 Oops, the level "#{notFound}" was not found!
+
   h1(data-i18n="play.choose_your_level") Choose Your Level
   p
     span(data-i18n="play.adventurer_prefix") You can jump to any level below, or discuss the levels on 
