--- a/app/templates/play.jade
+++ b/app/templates/play.jade
@@ -4,7 +4,7 @@ block content
 
   if notFound
     div(class="alert alert-warning") 
-      h2 Oops, the level "#{notFound}" was not found!
+      h2 #{notFoundMessage}
 
   h1(data-i18n="play.choose_your_level") Choose Your Level
   p
