--- a/app/templates/play.jade
+++ b/app/templates/play.jade
@@ -4,7 +4,9 @@ block content
 
   if notFound
     div(class="alert alert-warning") 
-      h2 #{notFoundMessage}
+      h2
+        span(data-i18n="play_level.level_load_error") Level could not be loaded: 
+        | #{notFound}
 
   h1(data-i18n="play.choose_your_level") Choose Your Level
   p
