--- a/app/styles/play/level/goals.sass
+++ b/app/styles/play/level/goals.sass
@@ -3,6 +3,10 @@
   left: 10px
   top: 42px
   background-color: rgba(200,200,200,0.8)
+  
+  &.brighter
+    background-color: rgba(200,200,200,1.0)
+  
   border: black
   padding: 5px 7px 5px 5px
   box-sizing: border-box
