Made changes in the language, It was earlier showing English(Au) for both Lithuanian and Norwegian Nynorsk. Couldno't change Bahasa Melayu. It keeps showing {English} in the description instead of Bahasa Melayu

--- a/app/templates/not_found.jade
+++ b/app/templates/not_found.jade
@@ -2,4 +2,4 @@ extends /templates/base
 
 block content
 
-  h1.text-center(data-i18n="not_found.page_not_found") Page not found
+  h1.text-center(data-i18n="not_found.page found") Page Not Found
